--- a/content/resources/10_32_exam2.md
+++ b/content/resources/10_32_exam2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Two problems related to the reverse osmosis systems covered in class.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-32-separation-processes-spring-2005/97cba3cf7f6cf37f715b71f7c5c4a577_10_32_exam2.pdf
 file_type: application/pdf
+parent_uid: 6141ac1d-c6c8-bc59-17c8-f12e2c28a325
 resourcetype: Document
 title: 10_32_exam2.pdf
 uid: 97cba3cf-7f6c-f37f-715b-71f7c5c4a577
