--- a/content/resources/10_32_ps1.md
+++ b/content/resources/10_32_ps1.md
@@ -4,6 +4,7 @@ description: 'Two problems: one is found in the course textbook, the other conce
   the mixture of hydrocarbons.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-32-separation-processes-spring-2005/1c21d686608f3e57fcbcc752e301d70f_10_32_ps1.pdf
 file_type: application/pdf
+parent_uid: de7e62a4-f330-dd55-2525-e8f8c9e1f57a
 resourcetype: Document
 title: 10_32_ps1.pdf
 uid: 1c21d686-608f-3e57-fcbc-c752e301d70f
