--- a/content/resources/10_32_ps3.md
+++ b/content/resources/10_32_ps3.md
@@ -4,6 +4,7 @@ description: This assignment consists of a series of problems related to the Kra
   process for the manufacture of paper.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-32-separation-processes-spring-2005/f5b97bfa1c90bbf8744a01844898949e_10_32_ps3.pdf
 file_type: application/pdf
+parent_uid: de7e62a4-f330-dd55-2525-e8f8c9e1f57a
 resourcetype: Document
 title: 10_32_ps3.pdf
 uid: f5b97bfa-1c90-bbf8-744a-01844898949e
