--- a/content/resources/10_32_ps5.md
+++ b/content/resources/10_32_ps5.md
@@ -4,6 +4,7 @@ description: 'Assignment of a problem from the course text: Seader, J. D., and E
   J. Henley. Separation Process Principles. New York, NY: Wiley, 1998. ISBN: 0471586269.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-32-separation-processes-spring-2005/5b6ee97e8e2ed15956b86a76cc883ebc_10_32_ps5.pdf
 file_type: application/pdf
+parent_uid: de7e62a4-f330-dd55-2525-e8f8c9e1f57a
 resourcetype: Document
 title: 10_32_ps5.pdf
 uid: 5b6ee97e-8e2e-d159-56b8-6a76cc883ebc
